update bao cao tuan 3

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectDB":  "Server=KIM\\KIMHUY; Database=Smarthome; Trusted_Connection=True; TrustServerCertificate=True;"
+    "ConnectDB": "Server=KIM\\KIMHUY; Database=Smarthome; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
+  "jwt": {
+    "Key": "ThisS3cr3tk$y123TOFj@!#asd qwe 1edsft",
+    "Audience": "http://localhost:58482",
+    "Issuer": "http://localhost:58482"
   }
 }
