--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectDB": "Server=KIM\\KIMHUY; Database=Smarthome; Trusted_Connection=True; TrustServerCertificate=True;"
+    "ConnectDB": "Data Source=SQL1002.site4now.net;Initial Catalog=db_ab28aa_smarthome;User Id=db_ab28aa_smarthome_admin;Password=Huy1303!@#"
+
   },
   "jwt": {
     "Key": "ThisS3cr3tk$y123TOFj@!#asd qwe 1edsft",
